--- a/Unsupervised Learning - Project.ipynb
+++ b/Unsupervised Learning - Project.ipynb
@@ -20,6 +20,91 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8f66bb29",
+   "metadata": {},
+   "source": [
+    "# Library Imports and Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "2aef900e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd # data analysis and manipulation\n",
+    "import numpy as np # back up to pandas, I like to import it\n",
+    "import matplotlib.pyplot as plt # data visuals\n",
+    "import seaborn as sns # data visuals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54b89bae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# EDA functions\n",
+    "\n",
+    "def df_shape(dataframe):\n",
+    "    shape = dataframe.shape\n",
+    "    if shape != (0, 0):\n",
+    "        return dataframe.shape\n",
+    "    else:\n",
+    "        return \"Your dataframe does not exist. Check your dataframe variable.\"\n",
+    "    \n",
+    "def df_info(dataframe):\n",
+    "    info = dataframe.info()\n",
+    "    if not dataframe.empty:\n",
+    "        return info\n",
+    "    else:\n",
+    "        return \"Your dataframe does not exist. Check your dataframe variable.\"\n",
+    "    \n",
+    "def df_head(dataframe):\n",
+    "    if not dataframe.empty:\n",
+    "        return dataframe.head()\n",
+    "    else:\n",
+    "        return \"Your dataframe does not exist. Check your dataframe variable.\"\n",
+    "\n",
+    "\n",
+    "def df_nulls(dataframe):\n",
+    "    null_count = dataframe.isnull().sum()\n",
+    "    null_percent = (null_count * 100) / len(dataframe)\n",
+    "    if not dataframe.empty:\n",
+    "        return f\"Here are the number and percent of nulls per column, respectively \\n{null_count} \\n{null_percent}\"\n",
+    "    else:\n",
+    "        return \"Your dataframe does not exist. Check your dataframe variable.\"\n",
+    "\n",
+    "def df_dups(dataframe):\n",
+    "    dup_count = dataframe.duplicated().sum()\n",
+    "    if not dataframe.empty:\n",
+    "        return f\"There are {dup_count} duplicates in your dataframe.\"\n",
+    "    else:\n",
+    "        return \"Your dataframe does not exist. Check your dataframe variable.\"\n",
+    "    \n",
+    "def drop_dups(dataframe):\n",
+    "    if not dataframe.empty:\n",
+    "        return dataframe.drop_duplicates()\n",
+    "    else:\n",
+    "        return \"Your dataframe does not exist. Check your dataframe variable.\"\n",
+    "\n",
+    "def df_num_describe(dataframe):\n",
+    "    if not dataframe.empty:\n",
+    "        return dataframe.describe()\n",
+    "    else:\n",
+    "        return \"Your dataframe does not exist. Check your dataframe variable.\"\n",
+    "\n",
+    "def df_cat_describe(dataframe):\n",
+    "    if not dataframe.empty():\n",
+    "        return dataframe.describe(include='O')\n",
+    "    else:\n",
+    "        return \"Your dataframe does not exist. Check your dataframe variable.\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c5e57f31",
    "metadata": {},
    "source": [
@@ -49,7 +134,11 @@
    "id": "5bfb7c9a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#load data\n",
+    "\n",
+    "raw_data = "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -166,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
